Fixed api, cmd and service priblems
