# api/handlers/v1/comment.go
@@ -35,33 +35,6 @@ func (h *handlerV1) CreateComment(c *gin.Context) {
 	})
 }
 
-// GetCommentAs godoc
-// @Summary Get Comment
-// @Description This method Get comment
-// @Tags Comment
-// @Accept json
-// @Produce json
-// @Param todo body models.GetCommentReq true "Get Comment"
-// @Success 201 {object} models.GetCommentRes
-// @Failure 401 {object} models.Err
-// @Failure 500 {object} models.Err
-// @Router /comment/get [GET]
-func (h *handlerV1) GetComment(c *gin.Context) {
-	body := models.GetCommentReq{}
-	err := c.ShouldBindJSON(&body)
-	fmt.Println(body)
-	if err != nil {
-		fmt.Println(err)
-		c.JSON(http.StatusOK, gin.H{
-			"message": "salome emas",
-		})
-		return
-	}
-	c.JSON(http.StatusOK, gin.H{
-		"message": "salom",
-	})
-}
-
 // UpdateCommentAs godoc
 // @Summary Update Comment
 // @Description This method Update comment
